--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="text">
       <h2>James Scott Purdy </h2> 
       <h3>Art Portfolio</h3>
-      <a href="#">Gallery</a>
+      <a href="gallery.html">Gallery</a>
     </div>
     <ul class="social">
       <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
