--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul id="menu">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
+                  <li><a href="#">Gallery</a></li>
                   <li><a href="#">Contact</a></li>
-                  <li><a href="#">FAQ</a></li>
             </ul>
 
             <div id="toggle">
@@ -34,8 +34,8 @@
             <ul id="menu">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
+                  <li><a href="#">Gallery</a></li>
                   <li><a href="#">Contact</a></li>
-                  <li><a href="#">FAQ</a></li>
             </ul>
       </div>
 
@@ -43,17 +43,9 @@
             <h1>Smooth Fade-Up Navigation</h1>
       </div>
 
-      <script>
+      
 
-      $("#toggle").click(function() {
-
-      $(this).toggleClass('on');
-      $("#resize").toggleClass("active");
-
-      });
-
-
-      </script>
+<script src="./main.js"></script>
 
 </body>
 </html>
