--- a/index.html
+++ b/index.html
@@ -1,55 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Responsive Navbar</title>
-    <link rel="stylesheet" type="text/css" target="_blank" href="style.css" />
-  </head>
-  <body>
-    <nav>
-      <div class="logo">
-        <!-- <img src="jsp.png" alt="logo" /> -->
-        <h1>James Scott Purdy</h1>
-      </div>
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-        <li>
-          <a href="#">Contact Us</a>
-        </li>
-      </ul>
-      <div class="hamburger">
-        <span class="line"></span>
-        <span class="line"></span>
-        <span class="line"></span>
-      </div>
-    </nav>
-    <div class="menubar">
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-        <li>
-          <a href="#">Contact Us</a>
-        </li>
-      </ul>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+    <!-- Title  -->
+    <title>James Scott Purdy</title>
+
+    <!-- Favicon  -->
+    <link rel="icon" href="img/core-img/favicon.ico">
+
+    <!-- Core Style CSS -->
+    <link rel="stylesheet" href="css/core-style.css">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Responsive CSS -->
+    <link href="css/responsive.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="showbox">
+            <div class="loader">
+                <svg class="circular" viewBox="25 25 50 50">
+                    <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+                </svg>
+            </div>
+        </div>
     </div>
 
-    <script src="script.js"></script>
-  </body>
+    <!-- Gradient Background Overlay -->
+    <div class="gradient-background-overlay"></div>
+
+    <!-- Header Area Start -->
+    <header class="header-area">
+        <div class="container-fluid h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 h-100">
+                    <div class="main-menu h-100">
+                        <nav class="navbar h-100 navbar-expand-lg">
+                            <!-- Logo Area  -->
+                            <a class="navbar-brand" href="index.html"><h1 class="logo">Scott Purdy</h1></a>
+
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#studioMenu" aria-controls="studioMenu" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
+
+                            <div class="collapse navbar-collapse" id="studioMenu">
+                                <!-- Menu Area Start  -->
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about-me.html">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="contact.html">contact</a>
+                                    </li>
+                                </ul>
+                                <!-- Search Form -->
+                                <div class="header-search-form ml-auto">
+                                    <form action="#">
+                                        <input type="search" class="form-control" placeholder="Input your keyword then press enter..." id="search" name="search">
+                                        <input class="d-none" type="submit" value="submit">
+                                    </form>
+                                </div>
+                                <!-- Search btn -->
+                                <div id="searchbtn">
+                                    <img src="img/core-img/search.png" alt="">
+                                </div>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Area End -->
+    
+    <!-- ***** Welcome Area Start ***** -->
+    <section class="welcome-area">
+        <div class="carousel h-100 slide" data-ride="carousel" id="welcomeSlider">
+            <!-- Carousel Inner -->
+            <div class="carousel-inner h-100">
+
+                <div class="carousel-item h-100 bg-img active" style="background-image: url(img/bg-img/1.jpg);">
+                    <div class="carousel-content h-100">
+                        <!-- <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div> -->
+                    </div>
+                </div>
+
+                <!-- <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/2.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/3.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/4.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/5.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/6.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/7.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/8.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/9.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/10.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/11.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/12.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item h-100 bg-img" style="background-image: url(img/bg-img/13.jpg);">
+                    <div class="carousel-content h-100">
+                        <div class="slide-text">
+                            <h2> Believe you can fly</h2>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </section>
+    <!-- ***** Welcome Area End ***** -->
+
+
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+<!-- <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p> -->
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+    <!-- jQuery (Necessary for All JavaScript Plugins) -->
+    <script src="js/jquery/jquery-2.2.4.min.js"></script>
+    <!-- Popper js -->
+    <script src="js/popper.min.js"></script>
+    <!-- Bootstrap js -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Plugins js -->
+    <script src="js/plugins.js"></script>
+    <!-- Active js -->
+    <script src="js/active.js"></script>
+
+</body>
+
 </html>
