--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Responsive Nevigation Menus in HTML CSS and JavaScript</title>
+    <title>James Scott Purdy</title>
   </head>
   <body>
     <header>
-      <a href="#" class="logo">OnlineITtuts</a>
+      <a href="#" class="logo">Scott Purdy</a>
       <nav class="navbar">
         <div class="btn">
           <i class="fas fa-times close-btn"></i>
