--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
     <main>
       <div class="gallery">
         <ul class="slides">
-          <li id="slide1"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw1.jpg" alt="" /></li>
-          <li id="slide2"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw2.jpg" alt="" /></li>
-          <li id="slide3"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw3.jpg" alt="" /></li>
-          <li id="slide4"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw4.jpg" alt="" /></li>
-          <li id="slide5"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw5.jpg" alt="" /></li>
+          <li id="slide1"><img src="./assets/img/scott1.jpg" alt="" /></li>
+          <li id="slide2"><img src="./assets/img/scott2.jpg" alt="" /></li>
+          <li id="slide3"><img src="./assets/img/scott3.jpg" alt="" /></li>
+          <li id="slide4"><img src="./assets/img/scott4.jpg" alt="" /></li>
+          <li id="slide5"><img src="./assets/img/scott5.jpeg" alt="" /></li>
         </ul>
       
         <ul class="thumbnails">
           <li>
-            <a href="#slide1"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw1.jpg" /></a>
+            <a href="#slide1"><img src="./assets/img/scott1.jpg" /></a>
           </li>
           <li>
-            <a href="#slide2"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw2.jpg" /></a>
+            <a href="#slide2"><img src="./assets/img/scott2.jpg" /></a>
           </li>
           <li>
-            <a href="#slide3"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw3.jpg" /></a>
+            <a href="#slide3"><img src="./assets/img/scott3.jpg" /></a>
           </li>
           <li>
-            <a href="#slide4"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw4.jpg" /></a>
+            <a href="#slide4"><img src="./assets/img/scott4.jpg" /></a>
           </li>
           <li>
-            <a href="#slide5"><img src="https://cdn.rawgit.com/huijing/filerepo/gh-pages/lw5.jpg" /></a>
+            <a href="#slide5"><img src="./assets/img/scott5.jpeg" /></a>
           </li>
         </ul>
       </div>
