--- a/index.html
+++ b/index.html
@@ -1,83 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"/>
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>James Scott Purdy Portfolio</title>
-  </head>
-  <body>
-    <header class="header" id="header">
-      <nav class="nav container">
-        <a href="#" class="nav__logo"
-          ><img src="./assets/img/scott-logo (1).png" alt="Logo"/></a>
+   <html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#" class="nav__link">Home</a>
-            </li>
+      <!--=============== REMIXICONS ===============-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
 
-            <li class="nav__item">
-              <a href="#" class="nav__link">About Us</a>
-            </li>
+      <!--=============== CSS ===============-->
+      <link rel="stylesheet" href="assets/css/styles.css">
 
-            <li class="nav__item">
-              <a href="#" class="nav__link">Services</a>
-            </li>
+      <title>Responsive navbar with search and login - Bedimcode</title>
+   </head>
+   <body>
+      <!--==================== HEADER ====================-->
+      <header class="header" id="header">
+         <nav class="nav container">
+            <a href="#" class="nav__logo">Logo</a>
 
-            <li class="nav__item">
-              <a href="#" class="nav__link">Featured</a>
-            </li>
+            <div class="nav__menu" id="nav-menu">
+               <ul class="nav__list">
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Home</a>
+                  </li>
 
-            <li class="nav__item">
-              <a href="#" class="nav__link">Contact Me</a>
-            </li>
-          </ul>
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">About</a>
+                  </li>
 
-          <div class="nav__close" id="nav-close">
-            <i class="ri-close-line"></i>
-          </div>
-        </div>
 
-        <div class="nav__actions">
-          <div class="nav__toggle" id="nav-toggle">
-            <i class="ri-menu-line"></i>
-          </div>
-        </div>
-      </nav>
-    </header>
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Gallery</a>
+                  </li>
 
-    <main>
-      <div class="gallery">
-        <ul class="slides">
-          <li id="slide1"><img src="./assets/img/scott1.jpg" alt="" /></li>
-          <li id="slide2"><img src="./assets/img/scott2.jpg" alt="" /></li>
-          <li id="slide3"><img src="./assets/img/scott3.jpg" alt="" /></li>
-          <li id="slide4"><img src="./assets/img/scott4.jpg" alt="" /></li>
-          <li id="slide5"><img src="./assets/img/scott5.jpeg" alt="" /></li>
-        </ul>
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Contact Me</a>
+                  </li>
+               </ul>
+
+               <!-- Close button -->
+               <div class="nav__close" id="nav-close">
+                  <i class="ri-close-line"></i>
+               </div>
+            </div>
+
+            <div class="nav__actions">
+               <div class="nav__toggle" id="nav-toggle">
+                  <i class="ri-menu-line"></i>
+               </div>
+            </div>
+         </nav>
+      </header>
+
+      <!--==================== MAIN ====================-->
+      <main class="main">
+         <img src="assets/img/bg-image.png" alt="image" class="main__bg">
+      </main>
       
-        <ul class="thumbnails">
-          <li>
-            <a href="#slide1"><img src="./assets/img/scott1.jpg" /></a>
-          </li>
-          <li>
-            <a href="#slide2"><img src="./assets/img/scott2.jpg" /></a>
-          </li>
-          <li>
-            <a href="#slide3"><img src="./assets/img/scott3.jpg" /></a>
-          </li>
-          <li>
-            <a href="#slide4"><img src="./assets/img/scott4.jpg" /></a>
-          </li>
-          <li>
-            <a href="#slide5"><img src="./assets/img/scott5.jpeg" /></a>
-          </li>
-        </ul>
-      </div>
-    </main>
-    <script src="assets/js/main.js"></script>
-  </body>
+      <!--=============== MAIN JS ===============-->
+      <script src="assets/js/main.js"></script>
+   </body>
 </html>
