--- a/index.html
+++ b/index.html
@@ -1,63 +1,34 @@
 <!DOCTYPE html>
-   <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Responsive Navigation Menus in HTML CSS and JavaScript</title>
+</head>
+<body>
+  <header>
+    <a href="#" class="logo">Scott Purdy</a>
+    <nav class="navbar">
+      <div class="btn">
+        <i class="fas fa-times close-btn"></i>
+      </div>
+      <a href="#" class="active">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Course</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div class="btn">
+      <i class="ri-menu-4-line"></i>    
+   </div>
+  </header>
+  <section>
+    <h2>Responsive Navbar</h2>
+  </section>
 
-      <!--=============== REMIXICONS ===============-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
-
-      <!--=============== CSS ===============-->
-      <link rel="stylesheet" href="assets/css/styles.css">
-
-      <title>Responsive navbar with search and login - Bedimcode</title>
-   </head>
-   <body>
-      <!--==================== HEADER ====================-->
-      <header class="header" id="header">
-         <nav class="nav container">
-            <a href="#" class="nav__logo">Logo</a>
-
-            <div class="nav__menu" id="nav-menu">
-               <ul class="nav__list">
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Home</a>
-                  </li>
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">About</a>
-                  </li>
-
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Gallery</a>
-                  </li>
-
-                  <li class="nav__item">
-                     <a href="#" class="nav__link">Contact Me</a>
-                  </li>
-               </ul>
-
-               <!-- Close button -->
-               <div class="nav__close" id="nav-close">
-                  <i class="ri-close-line"></i>
-               </div>
-            </div>
-
-            <div class="nav__actions">
-               <div class="nav__toggle" id="nav-toggle">
-                  <i class="ri-menu-line"></i>
-               </div>
-            </div>
-         </nav>
-      </header>
-
-      <!--==================== MAIN ====================-->
-      <main class="main">
-         <img src="assets/img/bg.jpg" alt="image" class="main__bg">
-      </main>
-      
-      <!--=============== MAIN JS ===============-->
-      <script src="assets/js/main.js"></script>
-   </body>
+  <script src="script.js"></script>
+</body>
 </html>
