--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <nav>
             <span id="brand">
-                  <a href="index.html">Brand</a>
+                  <a href="index.html">SP</a>
             </span>
 
             <ul id="menu">
@@ -40,7 +40,7 @@
       </div>
 
       <div class="content">
-            <h1>Smooth Fade-Up Navigation</h1>
+            <!-- <h1>Smooth Fade-Up Navigation</h1> -->
       </div>
 
       <script>
