--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
       <nav>
             <span id="brand">
-                  <a href="index.html">SP</a>
-            </span>
+                  <a href="index.html"><img src="./scott-logo (1).png" alt="Your Image" class="navbar-logo"></a>
+              </span>
+              
+              
 
             <ul id="menu">
                   <li><a href="#">Home</a></li>
