--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
       <nav>
             <span id="brand">
-                  <a href="index.html"><img src="./scott-logo (1).png" alt="Your Image" class="navbar-logo"></a>
-              </span>
-              
-              
+                  <a href="index.html">Brand</a>
+            </span>
 
             <ul id="menu">
                   <li><a href="#">Home</a></li>
@@ -42,7 +40,7 @@
       </div>
 
       <div class="content">
-            <!-- <h1>Smooth Fade-Up Navigation</h1> -->
+            <h1>Smooth Fade-Up Navigation</h1>
       </div>
 
       <script>
