--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="#" class="nav__logo">Scott Purdy</a>
+            <a href="#" class="nav__logo">
+               <img src="./scott-logo.png" alt="Scott Purdy Logo">
+           </a>
+           
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
