--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
       <link rel="stylesheet" href="assets/css/styles.css">
-      <title>Responsive navbar - Bedimcode</title>
+      <title>James Scott Purdy</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -68,9 +68,21 @@
       </header>
 
       <!--==================== MAIN ====================-->
-      <main>
-         <!-- Insert page sections -->
-      </main>
+      <main class="carousel-container">
+         <div class="carousel">
+           <div class="item active">
+             <img src="https://bit.ly/34xczKy" alt="Image 1" />
+           </div>
+           <div class="item">
+             <img src="https://bit.ly/3lkp5DW" alt="Image 2" />
+           </div>
+           <div class="item">
+             <img src="https://bit.ly/3iMHuI1" alt="Image 3" />
+           </div>
+         </div>
+         <button class="btn prev">Prev</button>
+         <button class="btn next">Next</button>
+       </main>
       
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
