--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
 <img src="" alt="">
     <!--==================== MAIN ====================-->
-    <main>
+    <!-- <main>
       <input type="radio" id="s-1" name="slider-control" checked="checked">
 <input type="radio" id="s-2" name="slider-control">
 <input type="radio" id="s-3" name="slider-control">
@@ -121,14 +121,14 @@
     <label class="js-slider_nav_item s-nav-3 prev" for="s-2"></label>
     <label class="js-slider_nav_item s-nav-3 next" for="s-1"></label>
   </div>
-  <!-- <div class="js-slider_indicator">
+  <div class="js-slider_indicator">
     <div class="js-slider-indi indi-1"></div>
     <div class="js-slider-indi indi-2"></div>
     <div class="js-slider-indi indi-3"></div>
-  </div> -->
+  </div>
 </div>
        
-    </main>
+    </main> -->
 
 
     <!--=============== MAIN JS ===============-->
