--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
-    />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"/>
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>James Scott Purdy</title>
   </head>
   <body>
-    <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">
           <img src="./scott-logo.png" alt="Scott Purdy Logo" />
         </a>
-
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
@@ -26,28 +21,24 @@
                 <span>Home</span>
               </a>
             </li>
-
             <li class="nav__item">
               <a href="#" class="nav__link">
                 <i class="ri-arrow-right-up-line"></i>
                 <span>About Us</span>
               </a>
             </li>
-
             <li class="nav__item">
               <a href="#" class="nav__link">
                 <i class="ri-arrow-right-up-line"></i>
                 <span>Projects</span>
               </a>
             </li>
-
             <li class="nav__item">
               <a href="#" class="nav__link">
                 <i class="ri-arrow-right-up-line"></i>
                 <span>Studio</span>
               </a>
             </li>
-
             <li class="nav__item">
               <a href="#" class="nav__link">
                 <i class="ri-arrow-right-up-line"></i>
@@ -55,83 +46,18 @@
               </a>
             </li>
           </ul>
-
-          <!-- Close button -->
           <div class="nav__close" id="nav-close">
             <i class="ri-close-large-line"></i>
           </div>
         </div>
-
-        <!-- Toggle button -->
         <div class="nav__toggle" id="nav-toggle">
           <i class="ri-menu-line"></i>
         </div>
       </nav>
     </header>
-<img src="" alt="">
-    <!--==================== MAIN ====================-->
-    <!-- <main>
-      <input type="radio" id="s-1" name="slider-control" checked="checked">
-<input type="radio" id="s-2" name="slider-control">
-<input type="radio" id="s-3" name="slider-control">
-<div class="js-slider">
-  <figure class="js-slider_item img-1">
-    <div class="js-slider_img">
-      <img class="c-img-w-full" src="./assets/images/scott1.jpg" alt="">
-    </div>
-    <figcaption class="wo-caption">
-      <h3 class="wo-h3">
-        <div class="c-label">Fully Public Debut</div>
-        <br class="view-sm mb-s">Tsuwano Domain Transferred Prints</h3>
-      <ul class="wo-credit">
-        <li>118 Prints, Kansei 1-12 (1789-1800)</li>
-        <li>Shimane Prefectural Museum (Nagata Collection)</li>
-        <li>Permanent Exhibition
-          <span class="c-txt-s">※Displayed in four parts throughout the year</span></li>
-      </ul>
-    </figcaption>
-  </figure>
-  <figure class="js-slider_item img-2">
-    <div class="js-slider_img">
-      <img class="c-img-h-full" src="./assets/images/scott2.jpg" alt=""></div>
-    <figcaption class="wo-caption">
-      <h3 class="wo-h3">Telescope "Without Elegance, No Love"</h3>
-      <ul class="wo-credit">
-        <li>Ōban, Kyōwa Period (1801-04)</li>
-        <li>Lee Darks Collection</li>
-        <li>Exhibition Period: January 30th (Wed) to February 18th (Mon)</li></ul>
-    </figcaption>
-  </figure>
-  <figure class="js-slider_item img-3">
-    <div class="js-slider_img">
-      <img class="c-img-h-full" src="./assets/images/scott3.jpg" alt=""></div>
-    <figcaption class="wo-caption">
-      <h3 class="wo-h3">Physalis "Without Elegance, No Love"</h3>
-      <ul class="wo-credit">
-        <li>Ōban, Kyōwa Period (1801-04)</li>
-        <li>U.S.A., Private Collection</li>
-        <li>Exhibition Period: January 30th (Wed) to February 18th (Mon)</li></ul>
-    </figcaption>
-  </figure>
-  <div class="js-slider_nav">
-    <label class="js-slider_nav_item s-nav-1 prev" for="s-3"></label>
-    <label class="js-slider_nav_item s-nav-1 next" for="s-2"></label>
-    <label class="js-slider_nav_item s-nav-2 prev" for="s-1"></label>
-    <label class="js-slider_nav_item s-nav-2 next" for="s-3"></label>
-    <label class="js-slider_nav_item s-nav-3 prev" for="s-2"></label>
-    <label class="js-slider_nav_item s-nav-3 next" for="s-1"></label>
-  </div>
-  <div class="js-slider_indicator">
-    <div class="js-slider-indi indi-1"></div>
-    <div class="js-slider-indi indi-2"></div>
-    <div class="js-slider-indi indi-3"></div>
-  </div>
-</div>
-       
-    </main> -->
-
-
-    <!--=============== MAIN JS ===============-->
+    <main>
+     
+    </main>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
