--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"/>
+    <link rel="stylesheet" href="./css/slider.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>James Scott Purdy</title>
   </head>
@@ -56,8 +58,50 @@
       </nav>
     </header>
     <main>
-     
+      <section class="main swiper mySwiper">
+        <div class="wrapper swiper-wrapper">
+          <div class="slide swiper-slide">
+            <img src="images/img1.jpg" alt="" class="image" />
+            <div class="image-data">
+              <span class="text">Enjoy the finest coffee drinks.</span>
+              <h2>
+                Enjoy Our Exclusive <br />
+                Coffee and Cocktails
+              </h2>
+              <a href="#" class="button">About Us</a>
+            </div>
+          </div>
+          <div class="slide swiper-slide">
+            <img src="images/img2.jpg" alt="" class="image" />
+            <div class="image-data">
+              <span class="text">We really like what we do.</span>
+              <h2>
+                Coffee Beans with a <br />
+                Perfect Aroma
+              </h2>
+              <a href="#" class="button">About Us</a>
+            </div>
+          </div>
+          <div class="slide swiper-slide">
+            <img src="images/img3.jpg" alt="" class="image" />
+            <div class="image-data">
+              <span class="text">Making Our coffee with lover.</span>
+              <h2>
+                Alluring and Fragrant <br />
+                Coffee Aroma
+              </h2>
+              <a href="#" class="button">About Us</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="swiper-button-next nav-btn"></div>
+        <div class="swiper-button-prev nav-btn"></div>
+        <div class="swiper-pagination"></div>
+      </section>
     </main>
+    <script src="JS/swiper-bundle.min.js"></script>
+    <script src="./JS/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
