--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
-  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
+  <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <title>James Scott Purdy</title>
 </head>
@@ -47,46 +47,32 @@
     </nav>
   </header>
   <main>
-    <div class="slider-ctr">
-      <figure class="slide">
-        <img src="./assets/images/scott1.jpg" alt="Sky">
-        <figcaption>
-          <div class="title">Placeholder</div>
-          <div class="author">Scott Purdy</div>
-        </figcaption>
-      </figure>
-      <figure class="slide">
-        <img src="./assets/images/scott2.jpg" alt="River">
-        <figcaption>
-          <div class="title">Placeholder</div>
-          <div class="author">Scott Purdy</div>
-        </figcaption>
-      </figure>
-      <figure class="slide">
-        <img src="./assets/images/scott3.jpg" alt="Rain">
-        <figcaption>
-          <div class="title">Placeholder</div>
-          <div class="author">Scott Purdy</div>
-        </figcaption>
-      </figure>
-      <figure class="slide text-on">
-        <img src="./assets/images/scott4.jpg" alt="Ocean">
-        <figcaption>
-          <div class="title">Placeholder</div>
-          <div class="author">Scott Purdy</div>
-        </figcaption>
-      </figure>
-      <div class="slider-control">
-        <div class="control prev disabled">
-          <i class="ri-arrow-left-line"></i>
-        </div>
-        <div class="control next">
-          <i class="ri-arrow-right-line"></i>
+    <main>
+      <div class="container">
+        <div class="header-body">
+          <div class="slider">
+            <div class="overlay anim"></div>
+            <img src="./assets/images/scott1.jpg" alt="img" class="slider-img" />
+          </div>
+          <div class="text">
+            <div>
+              <h1>
+                Modern Minimal
+              </h1>
+              <p>
+                Modernism is the single most important new style or philosophy of architecture and design of the 20th century, associated with an analytical approach to the function of buildings, a strictly rational use of materials, an
+                opennesss to structural innovation and the elimination of ornament
+              </p>
+            </div>
+          </div>
+          <ul class="social">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
         </div>
       </div>
-      
-      
-    </div>
+    </main>
   </main>
   <script src="assets/js/main.js"></script>
 </body>
