--- a/gallery.html
+++ b/gallery.html
@@ -55,9 +55,9 @@
 					<div class="filter-buttons">
 						<ul id="filter-btns">
 							<li class="active" data-target="all">ALL</li>
-							<li data-target="Branding">BRANDING</li>
-							<li data-target="Photoshop">PHOTOSHOP</li>
-							<li data-target="Fashion">FASHION</li>
+							<li data-target="Branding">ABSTRACT</li>
+							<li data-target="Photoshop">REALISM</li>
+							<li data-target="Fashion">PORTRAIT</li>
 						</ul>
 					</div>
 				</div>
